# anima-verse

./: .dockerignore  .gitignore  CLAUDE.md  README.md  fetch_models.sh  pyproject.toml  start.sh
app/: server.py
app/core/: act_engine.py  activity_engine.py  agent_inbox.py  agent_loop.py  body_slot_migration.py  body_slots.py  channel_health.py  character_io.py  character_ops.py  chat_engine.py  chat_ops.py  config.py  config_schema.py  config_validator.py  content_io.py  danger_system.py  day_consolidation.py  db.py  dependencies.py  embedding.py  event_images.py  expression_pose_maps.py  expression_regen.py  flag_lifecycle.py  hooks.py  intent_engine.py  llm_client.py  llm_queue.py  llm_router.py  llm_tasks.py  lora_library.py  memory_service.py  messaging_frame.py  model3d.py  model_capabilities.py  (+51 more)
docker/: DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh
docs/: config-defaults.md  getting-started-new-world.md  movement-model-and-skills.md  plugins.md  skill-core-api.md
frontend/: package-lock.json  package.json  play.html  vite.config.ts
migrations/: 2026-05-room-decency.py
static/: script.js
workflows/: img2img_workflow_flux1_inpaint_api.json  sdxl_inpaint_mapfit_api.json  sdxl_inpaint_mapfit_gui.json  text2img_workflow_flux-qwen_inpaint_api.json  text2img_workflow_flux1_api.json  text2img_workflow_flux2_api.json  text2img_workflow_qwen_api.json  text2img_workflow_qwen_inpaint_api.json  text2img_workflow_sd15_api.json  tts_voiceclone_workflow_api.json  tts_voicedesc_workflow_api.json  tts_voicename_workflow_api.json
(+1018 files in other folders)
