[tool.poetry]
name = "agent-system"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.2"


[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "agent-system"
version = "0.1.0"
dependencies = [
    "openai>=1.0.0",
    "fastapi>=0.95.0",
    "starlette>=1.3.1",
    "uvicorn>=0.22.0",
    "python-dotenv",
    "jinja2>=3.1.2",
    "python-multipart",
    "bcrypt>=4.0.0",
    "apscheduler",
    "onnxruntime",          # runtime for rembg's u2net + fastembed (rembg declares it only as an extra)
    "fastembed",            # built-in text embeddings (ONNX/CPU) for pose matching — no external endpoint needed
    "aiohttp>=3.14.0",      # CVE-2026-34993 / CVE-2026-47265 (Dependabot)
    "gradio_client",        # TTS backends (F5/XTTS via Gradio)
    "rembg",                # background removal (u2net)
    "pillow",
    "anthropic>=0.40.0",
    # Security floors for transitive deps (Dependabot); pulled via
    # requests/httpx. Pin the patched minimums.
    "idna>=3.15",
    "urllib3>=2.7.0"
]
